--- a/index.html
+++ b/index.html
@@ -15,20 +15,24 @@
   
 </head>
 <body>
-<div class="container">
-  <div class="card">
-    <img src="/images/image-qr-code.png" />
+<main class="container">
+  <article class="card">
+    <figure>
+      <img src="/images/image-qr-code.png" />
+    </figure>
     <div class="card-text">
         <h1>Improve your front-end skills by building projects</h1>
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
-  </div>
-</div>
+  </article>
+</main>
 
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Jack Hallett</a>.
-  </div>
+  <footer class="attribution">
+    <p>
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Jack Hallett</a>.
+    </p>
+  </footer>
 </body>
 </html>
